--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Unplugged Retreat</title>
-=======
+
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -23,15 +23,14 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-=======
   <header>
     <div class="content-wrapper">
-      <a href="#">img src="" alt="unplugged logo"</a>
+      <a href="#"><img src="" alt="unplugged logo"></a>
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="faq/index.html"></a></li>
-          <li><a href="about/index.html"></a></li>
+          <li><a href="faq/index.html">FAQ</a></li>
+          <li><a href="about/index.html">About</a></li>
         </ul>
       </nav>
     </div>
