--- a/about/index.html
+++ b/about/index.html
@@ -23,12 +23,12 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="#">img src="" alt="unplugged logo"</a>
+      <a href="#"><img src="" alt="unplugged logo"></a>
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="../faq/index.html"></a></li>
-          <li><a href="index.html"></a></li>
+          <li><a href="../faq/index.html">FAQ</a></li>
+          <li><a href="index.html">About</a></li>
         </ul>
       </nav>
     </div>
