--- a/about/index.html
+++ b/about/index.html
@@ -12,8 +12,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
@@ -23,7 +23,9 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <a href="#">
+        <img src="" alt="unplugged logo">
+      </a>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -35,21 +37,29 @@
   </header>
 
   <main>
+
     <section class="mission">
       <div class="content-wrapper">
-        <h2>Our Mission - we want to make you the team you always wanted to be.
-        </h2>
+        <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
         <div class="mission-content">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
+            vel facilisis.
+          </p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
+            vel facilisis.
+          </p>
         </div>
       </div>
     </section>
+
     <section class="map">
       <figure>
-        
       </figure>
     </section>
+
+  
     <section class="contact-section">
       <div class="content-wrapper">
         <h2>Contact us, because you all need this.</h2>
@@ -59,7 +69,8 @@
             <address>
               <p>333 Main St, Lake Geneva, WI 53147<br>
                 555-555-5555<br>
-                hello@unplugged.com</p>
+                hello@unplugged.com
+              </p>
             </address>
           </div>
           <div>
@@ -90,7 +101,13 @@
             <h4>Social</h4>
             <div class="social-icons">
               <p>
-                <a href="#"></a>
+                <a href="https://www.facebook.com/Skillcrush/" target="_blank"></a>
+              </p>
+              <p>
+                <a href="https://twitter.com/Skillcrush" target="_blank"></a>
+              </p>
+              <p>
+                <a href="https://www.instagram.com/skillcrush/" target="_blank"></a>
               </p>
             </div>
 
