--- a/faq/index.html
+++ b/faq/index.html
@@ -8,12 +8,12 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="manifest" href="../site.webmanifest">
+  <link rel="apple-touch-icon" href="../icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
@@ -23,12 +23,14 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="#">img src="" alt="unplugged logo"</a>
+      <a href="#">
+        <img src="" alt="unplugged logo">
+      </a>
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="index.html"></a></li>
-          <li><a href="../about/index.html"></a></li>
+          <li><a href="index.html">FAQ</a></li>
+          <li><a href="../about/index.html">About</a></li>
         </ul>
       </nav>
     </div>
