Adding background images

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
   <header>
     <div class="content-wrapper">
       <a href="#">
-        <img src="unpluggedlogo.png" alt="unplugged logo"></a>
+        <figure>
+          <img src="css/unpluggedlogo.png" alt="unplugged logo"></a>
+        </figure>
       <div class="header-divider"></div>
       <nav>
         <ul>
