--- a/faq/index.html
+++ b/faq/index.html
@@ -27,7 +27,9 @@
   <header>
     <div class="content-wrapper">
       <a href="#">
-        <img src="../unpluggedlogo.png" alt="unplugged logo">
+        <figure>
+          <img src="css/unpluggedlogo.png" alt="unplugged logo"></a>
+        </figure>
       </a>
       <div class="header-divider"></div>
       <nav>
