--- a/faq/index.html
+++ b/faq/index.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
 
+  <link rel="stylesheet" href="https://kit.fontawesome.com/d1ef80672f.js" crossorigin="anonymous">"
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 </head>
@@ -26,9 +28,9 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="#">
+      <a href="../index.html">
         <figure>
-          <img src="css/unpluggedlogo.png" alt="unplugged logo"></a>
+          <img src="../css/unpluggedlogo.png" alt="unplugged logo"></a>
         </figure>
       </a>
       <div class="header-divider"></div>
