--- a/faq/index.html
+++ b/faq/index.html
@@ -78,23 +78,28 @@
               hello@unplugged.com
             </p>
           </address>
-          <div class="social">
-            <h4>Social</h4>
-            <div class="social-icons">
-              <p>
-                <a href="#"></a>
-              </p>
-            </div>
-
+        </div>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p>
+              <a href="https://www.facebook.com/Skillcrush/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            </p>
+            <p>
+              <a href="https://twitter.com/Skillcrush" target="_blank"><i class="fab fa-twitter"></i></a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com/skillcrush/" target="_blank"><i class="fab fa-instagram"></i></a>
+            </p>
           </div>
-
         </div>
       </div>
-      <div class="copyright">
-        <p>Copyright 2024 | Unplugged</p>
-      </div>
+      <!-- footer content ends -->
     </div>
-
+    <!--footer content-wrapper ends-->
+    <div class="copyright">
+      <p>Copyright 2024 | Unplugged</p>
+    </div>
   </footer>
   
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
