--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
           <h4>Social</h4>
           <div class="social-icons">
             <p>
-              <a href="https://www.facebook.com/Skillcrush/" target="_blank"></a>
+              <a href="https://www.facebook.com/Skillcrush/" target="_blank"><i class="fab fa-facebook-f"></i></a>
             </p>
             <p>
-              <a href="https://twitter.com/Skillcrush" target="_blank"></a>
+              <a href="https://twitter.com/Skillcrush" target="_blank"><i class="fab fa-twitter"></i></a>
             </p>
             <p>
-              <a href="https://www.instagram.com/skillcrush/" target="_blank"></a>
+              <a href="https://www.instagram.com/skillcrush/" target="_blank"><i class="fab fa-instagram"></i></a>
             </p>
           </div>
         </div>
@@ -163,7 +163,7 @@
     </div>
     <!--footer content-wrapper ends-->
     <div class="copyright">
-      <p>Copyright 202X | Unplugged</p>
+      <p>Copyright 2024 | Unplugged</p>
     </div>
   </footer>
 
