--- a/about/index.html
+++ b/about/index.html
@@ -19,6 +19,10 @@
   
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+    integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -105,29 +109,28 @@
               hello@unplugged.com
             </p>
           </address>
-          <div class="social">
-            <h4>Social</h4>
-            <div class="social-icons">
-              <p>
-                <a href="https://www.facebook.com/Skillcrush/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-              </p>
-              <p>
-                <a href="https://twitter.com/Skillcrush" target="_blank"><i class="fab fa-twitter"></i></a>
-              </p>
-              <p>
-                <a href="https://www.instagram.com/skillcrush/" target="_blank"><i class="fab fa-instagram"></i></a>
-              </p>
-            </div>
-
+        </div>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p>
+              <a href="https://www.facebook.com/Skillcrush/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            </p>
+            <p>
+              <a href="https://twitter.com/Skillcrush" target="_blank"><i class="fab fa-twitter"></i></a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com/skillcrush/" target="_blank"><i class="fab fa-instagram"></i></a>
+            </p>
           </div>
-
         </div>
       </div>
-      <div class="copyright">
-        <p>Copyright 2024 | Unplugged</p>
-      </div>
+      <!-- footer content ends -->
     </div>
-
+    <!--footer content-wrapper ends-->
+    <div class="copyright">
+      <p>Copyright 2024 | Unplugged</p>
+    </div>
   </footer>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
